--- a/src/App.css
+++ b/src/App.css
@@ -12,17 +12,29 @@
 
 .card {
   background-color: cornflowerblue;
+  color: cornflowerblue;
   width: 100px;
   height: 130px;
   text-align: center;
+  font-size: 30px;
+  font-weight: 600;
   cursor: pointer;
   border-radius: 2px;
   transition: 
-    transform 0.6s ease-in-out,
-    background-color 1s ease;
+    transform 0.8s ease-in,
+    background-color 0.8s ease-in,
+    color 1s;
 }
 
 .card:hover {
   transform: rotateY(180deg);
   background-color: beige;
-} 
+}
+
+.content {
+  transition: transform 0.8s ease-in;
+}
+
+.card:hover .content {
+  transform: rotateY(-180deg);
+}
