add time feature and reset game functionality

--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,13 @@
   flex-direction: column;
 }
 
-#score {
+
+#top-bar {
   position: relative;
   top: -50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .cards {
