--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+* {
+  margin: 0;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
 }
 
 #game {
@@ -9,18 +12,14 @@
   flex-direction: column;
 }
 
-
 #top-bar {
-  position: relative;
-  top: -50px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-size: 13px;  
 }
 
 .cards {
-  position: relative;
-  top: -50px;
   display: grid;
   grid-template-columns: repeat(10, 100px);
   gap: 10px;
@@ -28,12 +27,14 @@
 
 .card {
   width: 100px;
-  height: 130px;
-  text-align: center;
+  height: 120px;
   font-size: 30px;
   font-weight: 600;
   cursor: pointer;
   border-radius: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card-not-rotated {
