--- a/src/pages/game.css
+++ b/src/pages/game.css
@@ -31,12 +31,12 @@
 }
 
 .card-not-rotated {
-    background-color: cornflowerblue;
+    background-color: #27445D;
     transition: transform 0.7s ease-in, background-color 0.7s ease-in;
 }
 
 .card-rotated {
-    background-color: beige;
+    background-color: #DDA853;
     transform: rotateY(180deg);
     transition:
         transform 0.7s ease-in,
@@ -44,9 +44,6 @@
         color 0.7s ease-in;
 }
 
-.value {
-    color: cornflowerblue;
-}
 
 .value-not-rotated {
     transition: transform 0.7s ease-in,
@@ -56,8 +53,9 @@
 
 .value-rotated {
     transform: rotateY(180deg);
-    color: cornflowerblue;
-    transition: color 0.7s ease-in;
+    color: #09122C;
+    transition: color 0.7s ease;
+    transition-delay: 1s;
 }
 
 .time-colored {
